--- a/styles.css
+++ b/styles.css
@@ -217,7 +217,7 @@ template {
 }
 
 h1 {
-  font-family: Montserrat;
+  font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-size: 40px;
   line-height: 50px;
@@ -225,7 +225,7 @@ h1 {
 }
 
 h2 {
-  font-family: Montserrat;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   text-transform: uppercase;
   font-size: 30px;
@@ -236,7 +236,7 @@ h2 {
 }
 
 h3 {
-  font-family: Montserrat;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 38px;
@@ -246,8 +246,8 @@ h3 {
 }
 
 h4 {
-  font-family: Montserrat;
-  font-weight: 700px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
   font-size: 30px;
   line-height: 30px;
   letter-spacing: 18.5%;
@@ -255,7 +255,7 @@ h4 {
 }
 
 p {
-  font-family: Montserrat;
+  font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-size: 20px;
   line-height: 24px;
@@ -263,7 +263,7 @@ p {
 }
 
 .navLink {
-  font-family: Montserrat;
+  font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-size: 20px;
   line-height: 24px;
@@ -273,7 +273,7 @@ p {
 }
 
 .portfolioTabHeading {
-  font-family: Montserrat;
+  font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-size: 14px;
   line-height: 17px;
@@ -281,7 +281,7 @@ p {
 }
 
 .techStackName {
-  font-family: Montserrat;
+  font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-size: 24px;
   line-height: 29px;
@@ -290,7 +290,7 @@ p {
 }
 
 .recentPosts {
-  font-family: Montserrat;
+  font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-size: 20px;
   line-height: 24px;
@@ -298,7 +298,7 @@ p {
 }
 
 .viewAll {
-  font-family: Montserrat;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-align: right;
@@ -306,9 +306,91 @@ p {
   color: #FFFBFB;
 }
 
+.navFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 50px;
+}
+
+.linkFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 33%;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.navLink {
+  list-style-type: none;
+}
+
+.landing {
+  height: 100vh;
+}
+
+.landingTextAndImage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 100px;
+}
+
+.landingText {
+  width: 40%;
+}
+
+.iconsFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 18%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0;
+}
+
+.landingLi {
+  list-style-type: none;
+}
+
+.landingIcon {
+  padding: 7px;
+  background: black;
+  background: #001F3D;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.portfolio {
+  background: url("../../portfolioBackground.png");
+  background-size: contain;
+  height: 1324px;
+  background-repeat: no-repeat;
+}
+
 body, html {
   font-size: 125%;
-  background-color: #E5E5E5;
+  background-color: #CCDADA;
 }
 
 .wrapper {
