--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,5 +1,7 @@
+$mont: 'Montserrat', sans-serif;
+
 h1 {
-    font-family: Montserrat;
+    font-family: $mont;
     font-weight: 600;
     font-size: 40px;
     line-height: 50px;
@@ -9,7 +11,7 @@ h1 {
 //Portfolio sub heading
 
 h2 {
-    font-family: Montserrat;
+    font-family: $mont;
     font-weight: 700;
     text-transform: uppercase;
     font-size: 30px;
@@ -22,7 +24,7 @@ h2 {
 // About Me, Contact
 
 h3 {
-    font-family: Montserrat;
+    font-family: $mont;
     font-weight: 700;
     font-size: 30px;
     line-height: 38px;
@@ -34,8 +36,8 @@ h3 {
 // Using now 
 
 h4 {
-    font-family: Montserrat;
-    font-weight: 700px;
+    font-family: $mont;
+    font-weight: 700;
     font-size: 30px;
     line-height: 30px;
     letter-spacing: 18.5%;
@@ -44,7 +46,7 @@ h4 {
 
 //body paragraphs, contact sheet
 p {
-    font-family: Montserrat;
+    font-family: $mont;
     font-weight: 600;
     font-size: 20px;
     line-height: 24px;
@@ -52,7 +54,7 @@ p {
 }
 
 .navLink {
-    font-family: Montserrat;
+    font-family: $mont;
     font-weight: 600;
     font-size: 20px;
     line-height: 24px;
@@ -62,7 +64,7 @@ p {
 }
 
 .portfolioTabHeading {
-    font-family: Montserrat;
+    font-family: $mont;
     font-weight: 600;
     font-size: 14px;
     line-height: 17px;
@@ -70,7 +72,7 @@ p {
 }
 
 .techStackName {
-    font-family: Montserrat;
+    font-family: $mont;
     font-weight: 600;
     font-size: 24px;
     line-height: 29px;
@@ -79,7 +81,7 @@ p {
 }
 
 .recentPosts {
-    font-family: Montserrat;
+    font-family: $mont;
     font-weight: 600;
     font-size: 20px;
     line-height: 24px;
@@ -87,7 +89,7 @@ p {
 }
 
 .viewAll {
-    font-family: Montserrat;
+    font-family: $mont;
     font-size: 16px;
     line-height: 20px;
     text-align: right;
