--- a/styles/partials/_landing.scss
+++ b/styles/partials/_landing.scss
@@ -1,5 +1,5 @@
 .landing{
-    height: 100vh;
+    height: 85vh;
 }
 .landingTextAndImage {
     display: flex;
@@ -8,8 +8,15 @@
     padding-top: 100px;
 }
 .landingText {
-    width: 40%;
+    width: 50%;
+    h1 {
+        padding-bottom: 50px;
+    }
+    p {
+        padding-bottom: 40px
+    }
 }
+
 .iconsFlex {
     display: flex;
     width: 18%;
@@ -21,7 +28,6 @@
 }
 .landingIcon {
     padding: 7px;
-    background: black;
-    background: #001F3D;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background: #181717;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.75);
 }
