--- a/styles/partials/_portfolioSection.scss
+++ b/styles/partials/_portfolioSection.scss
@@ -1,6 +1,76 @@
 .portfolio{
     background: url("../../portfolioBackground.png");
-    background-size: contain;
-    height: 1324px;
+    background-size:cover;
+    height: 1100px;
     background-repeat: no-repeat;
+    background-position-y: -95px;
+    background-position-x: 35%;
+    
+}
+.portfolioHeading {
+    padding: 75px 0px;
+    width: 400px;
+    margin: 0 auto;
+}
+h2 {
+    border: 10px solid #001F3D;
+    padding: 30px 30px;
+    margin-bottom: 30px;
+}
+.portfolioBar {
+    width: 100%;
+    height: 100px;
+    background: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.pBarP {
+    width: 15%;
+    text-align: center;
+    p {
+        font-size: 14px;
+        padding-bottom: 20px;
+        margin-top: 15px;
+        text-transform: uppercase;
+    }
+    
+}
+.pBarA {
+    border-bottom: 2px solid white;
+    p {
+        color: white;
+    }
+}
+
+.pBarB {
+    border-bottom: 2px solid grey;
+    p {
+        color: grey;
+    }
+}
+.projectRow {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    // :nth-child(2) {
+    //     border-left: 1px solid black;
+    // }
+}
+.projectRowA {
+    border-bottom: 4px solid black;
+}
+.project {
+    width: calc(50% - .5px);  
+    height: 300px;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;  
+    }
+    
+}
+.pageTurners {
+    object-position: top;
 }
