--- a/styles.css
+++ b/styles.css
@@ -262,7 +262,7 @@ h4 {
 h5 {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 30px;
   text-align: left;
   vertical-align: top;
@@ -316,7 +316,7 @@ p {
 .recentPosts {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #FFFBFB;
 }
@@ -462,10 +462,11 @@ p {
 .portfolio {
   background: url("../../portfolioBackground.png");
   background-size: cover;
-  height: 2350px;
+  height: 3100px;
   background-repeat: no-repeat;
   background-position-y: -350px;
   background-position-x: 35%;
+  margin-bottom: 20px;
 }
 
 .projectDisplay {
@@ -525,6 +526,11 @@ h2 {
 }
 
 .projectRow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   margin: 0;
   padding: 0;
 }
@@ -534,19 +540,13 @@ h2 {
 }
 
 .project {
-  width: 100%;
-  height: 450px;
+  width: 40%;
 }
 .project img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.pageTurners {
-  -o-object-position: top;
-     object-position: top;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 h3 {
@@ -587,7 +587,7 @@ h4 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 25%;
+  width: 20%;
   padding-bottom: 100px;
 }
 .tech p {
@@ -605,10 +605,6 @@ h4 {
 }
 .techStack:nth-of-type(2) .tech {
   width: 50%;
-}
-
-.tech:last-of-type {
-  width: 100%;
 }
 
 .recentPostsDiv {
@@ -659,9 +655,14 @@ h4 {
   text-align: left;
   margin-left: 10px;
   padding-bottom: 10px;
+  font-size: 18px;
 }
 .postText p:nth-of-type(2) {
   color: black;
+}
+
+.post:nth-of-type(2) h5 {
+  padding-bottom: 35px;
 }
 
 h5 a {
