--- a/styles/partials/_recentPosts.scss
+++ b/styles/partials/_recentPosts.scss
@@ -33,9 +33,15 @@
         text-align: left;
         margin-left: 10px;
         padding-bottom: 10px;
+        font-size: 18px;
     }
     p:nth-of-type(2){
         color: black;
+    }
+}
+.post:nth-of-type(2) {
+    h5 {
+        padding-bottom: 35px;
     }
 }
 h5 a {
