--- a/styles.css
+++ b/styles.css
@@ -462,7 +462,7 @@ p {
 .portfolio {
   background: url("../../portfolioBackground.png");
   background-size: cover;
-  height: 3100px;
+  height: 1500px;
   background-repeat: no-repeat;
   background-position-y: -350px;
   background-position-x: 35%;
@@ -537,16 +537,43 @@ h2 {
 
 .projectRowA {
   border-bottom: 4px solid black;
+  margin-bottom: 30px;
 }
 
 .project {
-  width: 40%;
+  width: 45%;
+  background: rgba(104, 104, 104, 0.091);
+  border-radius: 5px;
+  border: solid 1rem rgba(104, 104, 104, 0.091);
+  overflow: hidden;
+  height: 435px;
 }
 .project img {
+  height: 550px;
   width: 100%;
-  height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.video {
+  width: 45%;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  height: 435px;
+  background: rgba(104, 104, 104, 0.091);
+  border-radius: 5px;
+  border: solid 1rem rgba(104, 104, 104, 0.091);
+  margin-bottom: 25px;
+}
+.video video {
+  position: absolute;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: 0;
+  height: 700px;
+  bottom: 0;
 }
 
 h3 {
@@ -811,6 +838,11 @@ footer a {
   line-height: 15px;
   letter-spacing: 5px;
   color: white;
+}
+
+.doubleArrow:hover {
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
 }
 
 body, html {
