--- a/styles/partials/_portfolioSection.scss
+++ b/styles/partials/_portfolioSection.scss
@@ -1,7 +1,7 @@
 .portfolio{
     background: url("../../portfolioBackground.png");
     background-size:cover;
-    height: 3100px;
+    height: 1500px;
     background-repeat: no-repeat;
     background-position-y: -350px;
     background-position-x: 35%;
@@ -63,13 +63,40 @@ h2 {
 }
 .projectRowA {
     border-bottom: 4px solid black;
+    margin-bottom: 30px;
 }
 .project {
-    width: 40%;
+    width: 45%;
+    background: rgba(104, 104, 104, 0.091);
+    border-radius: 5px;
+    border: solid 1rem rgba(104, 104, 104, 0.091);
+    overflow: hidden;
+    height: 435px;
     img {
+        height: 550px;
         width: 100%;
-        height: 100%;
-        object-fit: contain; 
+        object-fit: cover; 
+    }
+}
+.video {
+    width: 45%;
+    position: relative;
+    display: inline-block;
+    overflow:hidden;
+    height: 435px;
+    background: rgba(104, 104, 104, 0.091);
+    // padding-top: 20px;
+    // padding-bottom: 40px;
+    border-radius: 5px;
+    border: solid 1rem rgba(104, 104, 104, 0.091);
+    margin-bottom: 25px;
+   video {
+        position: absolute;
+        width: 100%;
+        object-fit: cover;
+        z-index: 0;
+        height: 700px;
+        bottom: 0;
     }
 }
 
