--- a/styles/partials/_portfolioSection.scss
+++ b/styles/partials/_portfolioSection.scss
@@ -1,16 +1,15 @@
 .portfolio{
     background: url("../../portfolioBackground.png");
-    background-size:cover;
-    height: 1500px;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-position-y: -350px;
+    background-position-y: -50px;
     background-position-x: 35%;
     margin-bottom: 20px;
-    
 }
 .projectDisplay {
-    background-color: #1A1A1A;
-
+    background-color: #000000;
+    display: none;
+    // padding-bottom: 300px;
 }
 .portfolioHeading {
     padding: 75px 0px;
@@ -25,7 +24,7 @@ h2 {
 .portfolioBar {
     width: 100%;
     height: 100px;
-    background: #1A1A1A;
+    background: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,12 +46,19 @@ h2 {
     p {
         color: white;
     }
+    p:hover {
+        font-size: 16px;
+    }
 }
 
 .pBarB {
     border-bottom: 2px solid grey;
     p {
         color: grey;
+    }
+    p:hover {
+        font-size: 16px;
+        cursor: pointer;
     }
 }
 .projectRow {
@@ -67,7 +73,7 @@ h2 {
 }
 .project {
     width: 45%;
-    background: rgba(104, 104, 104, 0.091);
+    background: rgba(196, 192, 192, 0.476);
     border-radius: 5px;
     border: solid 1rem rgba(104, 104, 104, 0.091);
     overflow: hidden;
@@ -84,7 +90,7 @@ h2 {
     display: inline-block;
     overflow:hidden;
     height: 435px;
-    background: rgba(104, 104, 104, 0.091);
+    background: rgba(196, 192, 192, 0.476);
     // padding-top: 20px;
     // padding-bottom: 40px;
     border-radius: 5px;
@@ -99,4 +105,51 @@ h2 {
         bottom: 0;
     }
 }
-
+.featured {
+    background: #CCDADA;
+    width: 80%; 
+    padding-top: 75px;
+    margin: 0 auto;
+    border-right: 150px solid black;
+    border-left: 150px solid black;
+    display: block;
+}
+.featuredProject {
+    display: flex;
+    padding-bottom: 50px;
+    padding-top: 10px;
+    justify-content: space-between;
+}
+.featuredProjectImage {
+    width: 33%;
+    padding-right: 15px;
+    img {
+        width: 100%;
+        border-radius: 10px;
+    }
+}
+.featuredProjectText {
+    width: 60%;
+    h4 {
+        margin: -10px 0 20px 0;
+        text-align: left;
+    }
+    span {
+        background: #001F3D;
+        color: white;
+        border-radius: 10px;
+        padding: 5px 7px;
+        letter-spacing: 3px;
+        font-size: 18px;
+    }
+}
+.featureDescription {
+    padding-top: 20px;
+    font-size: 14px;
+    color: black;
+}
+.fPTS {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
