--- a/styles/partials/_portfolioSection.scss
+++ b/styles/partials/_portfolioSection.scss
@@ -1,6 +1,6 @@
 .portfolio{
     background: url("../../portfolioBackground.png");
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position-y: -50px;
     background-position-x: 35%;
@@ -24,7 +24,7 @@ h2 {
 .portfolioBar {
     width: 100%;
     height: 100px;
-    background: #000000;
+    background: #1A1A1A;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,16 +42,6 @@ h2 {
     
 }
 .pBarA {
-    border-bottom: 2px solid white;
-    p {
-        color: white;
-    }
-    p:hover {
-        font-size: 16px;
-    }
-}
-
-.pBarB {
     border-bottom: 2px solid grey;
     p {
         color: grey;
@@ -61,11 +51,24 @@ h2 {
         cursor: pointer;
     }
 }
+
+.pBarB {
+    border-bottom: 2px solid white;
+    p {
+        color: white;
+    }
+    p:hover {
+        font-size: 16px;
+        cursor: pointer;
+    }
+}
 .projectRow {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
+    align-items: center;
 }
 .projectRowA {
     border-bottom: 4px solid black;
@@ -73,16 +76,50 @@ h2 {
 }
 .project {
     width: 45%;
-    background: rgba(196, 192, 192, 0.476);
     border-radius: 5px;
-    border: solid 1rem rgba(104, 104, 104, 0.091);
     overflow: hidden;
     height: 435px;
+    position: relative;
+    margin-bottom: 20px;
+    padding-right: 40px;
     img {
         height: 550px;
         width: 100%;
         object-fit: cover; 
     }
+}
+.projectText {
+    width: 40%;
+    padding: 10px 20px 30px 20px;
+    margin: 75px 50px 75px 25px;
+    position: relative;
+    h5 {
+        text-align: center;
+        padding-bottom: 15px;
+        font-family: $mont;
+        color: #001F3D;
+        border-bottom: 2px solid black;
+        margin-bottom: 5px;
+    }
+    p {
+        padding-bottom: 40px;
+        color: black; 
+        text-align: left;
+        font-size: 14px;
+    }
+    p:nth-of-type(2) {
+        letter-spacing: 3px;
+        background: #001F3D;
+        padding: 10px 10px;
+        text-align: center;
+        color: white;
+        position: absolute;
+        bottom: 10px;
+        width: 90%;
+        margin: 0 auto;
+    }
+    background: #CCDADA;
+
 }
 .video {
     width: 45%;
@@ -90,12 +127,9 @@ h2 {
     display: inline-block;
     overflow:hidden;
     height: 435px;
-    background: rgba(196, 192, 192, 0.476);
-    // padding-top: 20px;
-    // padding-bottom: 40px;
     border-radius: 5px;
-    border: solid 1rem rgba(104, 104, 104, 0.091);
     margin-bottom: 25px;
+    padding-top: 20px;
    video {
         position: absolute;
         width: 100%;
@@ -105,18 +139,35 @@ h2 {
         bottom: 0;
     }
 }
+.video1 {
+    width: 45%;
+    position: relative;
+    display: inline-block;
+    overflow:hidden;
+    height: 435px;
+    border-radius: 5px;
+    margin-bottom: 25px;
+    padding-top: 20px;
+   video {
+        position: absolute;
+        width: 100%;
+        object-fit: cover;
+        z-index: 0;
+        bottom: 0;
+    }
+}
 .featured {
-    background: #CCDADA;
+    background: white;
     width: 80%; 
     padding-top: 75px;
     margin: 0 auto;
-    border-right: 150px solid black;
-    border-left: 150px solid black;
+    border-right: 145px solid black;
+    border-left: 145px solid black;
     display: block;
 }
 .featuredProject {
     display: flex;
-    padding-bottom: 50px;
+    padding-bottom: 80px;
     padding-top: 10px;
     justify-content: space-between;
 }
@@ -126,6 +177,7 @@ h2 {
     img {
         width: 100%;
         border-radius: 10px;
+        border: 0.25px solid black;
     }
 }
 .featuredProjectText {
@@ -133,6 +185,15 @@ h2 {
     h4 {
         margin: -10px 0 20px 0;
         text-align: left;
+        font-weight: 700;
+        font-family: $mont;
+        a {
+            text-decoration: none;
+            color: #001F3D;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
     }
     span {
         background: #001F3D;
@@ -152,4 +213,49 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
+}
+.mask {
+    opacity: 0;
+    position: absolute;
+    height: 100%;
+    width: 95%;
+    background: black;
+    margin: 0 auto;
+    text-align: center;
+    padding: 75px 25px;
+    z-index: 1;
+    top: 0;
+    &:hover {
+        opacity: 0.75;
+    }
+    p, h5 {
+        color: white;
+        text-align: center;
+    }
+    h5 {
+        padding-bottom: 25px;
+        padding-top: 100px;
+    }
+    p {
+        padding-bottom: 25px;
+    }
+    p:nth-of-type(2) {
+        letter-spacing: 6px;
+    }
+    button {
+        background: #001F3D;
+        color: white;
+        opacity: 1;
+        cursor: pointer;
+        border: none;
+        border-radius: 5px;
+        margin-right: 20px;
+        font-family: $mont;
+        padding: 10px 10px;
+        &:hover {
+            background: red;
+            color: white;
+        }
+    }
 }
