--- a/styles.css
+++ b/styles.css
@@ -676,6 +676,11 @@ h2 {
   border-radius: 10px;
   border: 0.25px solid black;
 }
+.featuredProjectImage video {
+  width: 100%;
+  border-radius: 10px;
+  border: 0.25px solid black;
+}
 
 .featuredProjectText {
   width: 60%;
@@ -700,6 +705,7 @@ h2 {
   padding: 5px 7px;
   letter-spacing: 3px;
   font-size: 18px;
+  font-family: "Montserrat", sans-serif;
 }
 
 .featureDescription {
