--- a/styles/partials/_portfolioSection.scss
+++ b/styles/partials/_portfolioSection.scss
@@ -179,6 +179,11 @@ h2 {
         border-radius: 10px;
         border: 0.25px solid black;
     }
+    video{
+        width: 100%;
+        border-radius: 10px;
+        border: 0.25px solid black;
+    }
 }
 .featuredProjectText {
     width: 60%;
@@ -202,6 +207,7 @@ h2 {
         padding: 5px 7px;
         letter-spacing: 3px;
         font-size: 18px;
+        font-family: $mont;
     }
 }
 .featureDescription {
