weird background issue

--- a/styles.css
+++ b/styles.css
@@ -465,7 +465,7 @@ p {
 }
 
 .portfolio {
-  background: url("../../portfolioBackground.png");
+  background: url("portfolioBackground.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position-y: -50px;
