--- a/styles/partials/_portfolioSection.scss
+++ b/styles/partials/_portfolioSection.scss
@@ -1,5 +1,5 @@
 .portfolio{
-    background: url("../../portfolioBackground.png");
+    background: url("portfolioBackground.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position-y: -50px;
