--- a/styles/partials/_portfolioSection.scss
+++ b/styles/partials/_portfolioSection.scss
@@ -93,6 +93,7 @@ h2 {
     padding: 10px 20px 30px 20px;
     margin: 75px 50px 75px 25px;
     position: relative;
+    border-radius: 4px;
     h5 {
         text-align: center;
         padding-bottom: 15px;
