--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    width: 33%;
     button {
         background: #001F3D;
         color: white;
