--- a/styles/partials/_nav.scss
+++ b/styles/partials/_nav.scss
@@ -26,12 +26,12 @@
 }
 .logoDiv {
     position: relative;
-    width: 10%;
-    height: 100px;
+    width: 150px;
+
 }
 .logoImage {
     width: 100%;
     position: absolute;
-    top: -10px;
+    top: -45px;
     left: -25px;
 }
