--- a/styles/partials/_recentPosts.scss
+++ b/styles/partials/_recentPosts.scss
@@ -1,6 +1,6 @@
 .recentPostsDiv {
     background: #0F4A6F;
-    height: 450px;
+    padding-bottom: 70px;
 }
 .recentHeading {
     width: 80%;
@@ -21,10 +21,11 @@
     width: 80%;
     margin: 0 auto;
     justify-content: space-between;
+    
 }
 .post {
     background: white;
-    height: 300px;
+   
     width: 47%;
 }
 .postText {
