--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,6 +7,7 @@
 @import "./partials/recentPosts";
 @import "./partials/contact";
 @import "./partials/footer";
+@import "./partials/_mediaQueries";
 
 body, html {
     font-size: 125%;
