--- a/styles/partials/_mediaQueries.scss
+++ b/styles/partials/_mediaQueries.scss
@@ -52,6 +52,9 @@
     .contactForm {
         width: 100%;
         text-align: center;
+        button {
+            margin: 0 auto;
+        }
     }
     .contactImage {
         width: 100%;
